fix: reduce width to button only to allow clicking on bookingTrain behind

--- a/my-page-app/src/components/hyttebooking/month-overview/components/month-calendar/calendar-cell/CalendarCell.module.css
+++ b/my-page-app/src/components/hyttebooking/month-overview/components/month-calendar/calendar-cell/CalendarCell.module.css
@@ -21,7 +21,6 @@
 }
 
 .addButtonContainer {
-  width: 100%;
   height: 100%;
   padding: 0 0.1rem;
   display: flex;
